[project]
name = "chatly-mcp"
version = "0.1.0"
description = "MCP server to remote-control ChatlyAI (Vyro) accounts: images, scripts, chat, and more."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "cloakbrowser>=0.3",
]

[project.scripts]
chatly-mcp = "chatly_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chatly_mcp"]
